--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,7 +25,7 @@ section {
   width: 85vw;
 
   display: grid;
-  grid-template-columns: repeat(12, auto);
+  grid-template-columns: repeat(12, 1fr);
   grid-template-rows: repeat(7, 80px);
   gap: 10px 10px;
 }
