--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,33 +4,37 @@
 
 
 * {
-  margin: 0px;
-  padding: 0px;
-  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
+
+main{
+  display: grid;
+  height: 100vh;
+  gap: 10px;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  grid-template-rows: 0.25fr auto;
+  grid-template-areas: 
+            "nav nav nav nav nav"
+            "sidebar main main main main";
+  
+}
+
 
 header {
-  background-color: red;
-  height: 9vh;
+  background-color: greenyellow;
+  grid-area: nav;
+  
 }
-
 aside {
-  background-color: green;
-  height: 100%;
+  background-color: cyan;
+  grid-area: sidebar;
+  margin-left: 10px;
+ 
 }
-
 section {
-  background-color: blueviolet;
-  height: 100%;
-  width: 85vw;
-
-  display: grid;
-  grid-template-columns: repeat(12, 1fr);
-  grid-template-rows: repeat(7, 80px);
-  gap: 10px 10px;
+  background-color: red;
+  grid-area: main;
+  
 }
 
-.main-container {
-  display: flex;
-  height: 91vh;
-}
