--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -36,5 +36,10 @@ section {
   background-color: red;
   grid-area: main;
   margin: 0 10px 10px 0;
+
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  grid-template-rows: repeat(7, 80px);
+  gap: 10px 10px;
 }
 
