--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,9 +3,12 @@
 @import 'tailwindcss/utilities';
 
 
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Roboto:wght@100&display=swap');
+
 * {
   margin: 0;
   padding: 0;
+  font-family: 'Open Sans', sans-serif;
 }
 
 main{
@@ -22,19 +25,22 @@ main{
 
 
 header {
-  background-color: greenyellow;
+  background-color: white;
   grid-area: nav;
+  box-shadow: 0 10px 10px black;
   
 }
 aside {
-  background-color: cyan;
+  background-color: white;
   grid-area: sidebar;
+  box-shadow: 2px -2px 10px rgba(0, 0, 0, 0.3);
+
   
  
 }
 
 section {
-  background-color: red;
+  background-color: white;
   grid-area: main;
   
 
