--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,7 +11,7 @@
   font-family: 'Open Sans', sans-serif;
 }
 
-main{
+.layout-with-sidebar{
   display: grid;
   height: 100vh;
  
@@ -20,6 +20,18 @@ main{
   grid-template-areas: 
             "nav nav nav nav nav"
             "sidebar main main main main";
+  
+}
+
+.layout-without-sidebar{
+  display: grid;
+  height: 100vh;
+ 
+  grid-template-columns: 0.25fr 1fr 1fr 1fr 1fr;
+  grid-template-rows: 0.25fr auto;
+  grid-template-areas: 
+            "nav nav nav nav nav"
+            "main main main main main";
   
 }
 
