--- a/styles/globals.css
+++ b/styles/globals.css
@@ -52,7 +52,7 @@ aside {
 }
 
 section {
-  background-color: red;
+  background-color: white;
   grid-area: main;
   
 
@@ -60,5 +60,27 @@ section {
   grid-template-columns: repeat(12, 1fr);
   grid-template-rows: repeat(7, 80px);
  
+}
+
+.flex-center {
+  @apply flex justify-center items-center;
+}
+
+.flex-between {
+  @apply flex justify-between items-center;
+}
+
+.log-in{
+
+
+  @apply rounded-lg border border-none bg-light-blue py-1.5 px-5 text-white transition-all hover:bg-white hover:text-black text-center text-sm flex items-center justify-center;
+}
+
+.dropdown {
+  @apply absolute right-0 top-full mt-3  px-4 pb-4 rounded-lg bg-white min-w-[210px] flex flex-col gap-2 justify-end items-end shadow-md;
+}
+
+.dropdown_link {
+  @apply text-sm  text-gray-700 hover:text-gray-500 font-medium;
 }
 
