--- a/styles/globals.css
+++ b/styles/globals.css
@@ -62,18 +62,14 @@ section {
  
 }
 
+
+/* Style classes for Navbar */
 .flex-center {
   @apply flex justify-center items-center;
 }
 
 .flex-between {
   @apply flex justify-between items-center;
-}
-
-.log-in{
-
-
-  @apply rounded-lg border border-none bg-light-blue py-1.5 px-5 text-white transition-all hover:bg-white hover:text-black text-center text-sm flex items-center justify-center;
 }
 
 .dropdown {
@@ -83,4 +79,14 @@ section {
 .dropdown_link {
   @apply text-sm  text-gray-700 hover:text-gray-500 font-medium;
 }
+
+/* Button */
+
+.log-in{
+
+
+  @apply rounded-lg border border-none bg-light-blue py-1.5 px-5 text-white transition-all hover:bg-white hover:text-black text-center text-sm flex items-center justify-center;
+}
+
+
 
