--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,6 +11,9 @@
   font-family: 'Open Sans', sans-serif;
 }
 
+
+
+/* Style classes for Side Bar */
 .layout-with-sidebar{
   display: grid;
   height: 100vh;
@@ -37,7 +40,7 @@
 
 
 header {
-  background-color: yellow;
+  background-color: white;
   grid-area: nav;
   box-shadow: 0 10px 10px black;
   
@@ -45,7 +48,7 @@ header {
 aside {
   background-color: white;
   grid-area: sidebar;
-  box-shadow: 2px -2px 10px rgba(0, 0, 0, 0.3);
+  box-shadow: 2px 0px 10px rgba(0, 0, 0, 0.3);
 
   
  
@@ -54,6 +57,7 @@ aside {
 section {
   background-color: #F0F4FB;
   grid-area: main;
+  overflow-y: auto;
   
 
   display: grid;
@@ -61,6 +65,9 @@ section {
   grid-template-rows: repeat(7, 80px);
  
 }
+/* section::-webkit-scrollbar{
+  width:0px;
+} */
 
 
 /* Style classes for Navbar */
@@ -73,7 +80,7 @@ section {
 }
 
 .dropdown {
-  @apply absolute right-0 top-full mt-3  px-4 pb-4 rounded-lg bg-white min-w-[210px] flex flex-col gap-2 justify-end items-end shadow-md;
+  @apply absolute right-0 mt-11  px-4 pb-4 rounded-lg bg-white min-w-[210px] flex flex-col gap-2 justify-end items-end shadow-md;
 }
 
 .dropdown_link {
