--- a/styles/globals.css
+++ b/styles/globals.css
@@ -45,7 +45,7 @@ header {
 aside {
   background-color: white;
   grid-area: sidebar;
-  box-shadow: 2px -2px 10px rgba(0, 0, 0, 0.3);
+  box-shadow: 2px 0 2px rgba(0, 0, 0, 0.3);
 
   
  
@@ -54,12 +54,16 @@ aside {
 section {
   background-color: #F0F4FB;
   grid-area: main;
+  overflow-y: auto;
   
 
   display: grid;
   grid-template-columns: repeat(12, 1fr);
   grid-template-rows: repeat(7, 80px);
  
+}
+section::-webkit-scrollbar{
+  width: 0px;
 }
 
 
