--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,74 +1,61 @@
-@import 'tailwindcss/base';
-@import 'tailwindcss/components';
-@import 'tailwindcss/utilities';
+@import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
 
-
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Roboto:wght@100&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Roboto:wght@100&display=swap");
 
 * {
   margin: 0;
   padding: 0;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
 }
-
-
 
 /* Style classes for Side Bar */
-.layout-with-sidebar{
+.layout-with-sidebar {
   display: grid;
   height: 100vh;
- 
+
   grid-template-columns: 0.25fr 1fr 1fr 1fr 1fr;
   grid-template-rows: 0.25fr auto;
-  grid-template-areas: 
-            "nav nav nav nav nav"
-            "sidebar main main main main";
-  
+  grid-template-areas:
+    "nav nav nav nav nav"
+    "sidebar main main main main";
 }
 
-.layout-without-sidebar{
+.layout-without-sidebar {
   display: grid;
   height: 100vh;
- 
+
   grid-template-columns: 0.25fr 1fr 1fr 1fr 1fr;
   grid-template-rows: 0.25fr auto;
-  grid-template-areas: 
-            "nav nav nav nav nav"
-            "main main main main main";
-  
+  grid-template-areas:
+    "nav nav nav nav nav"
+    "main main main main main";
 }
-
 
 header {
   background-color: white;
   grid-area: nav;
   box-shadow: 0 10px 10px black;
-  
 }
 aside {
   background-color: white;
   grid-area: sidebar;
-  box-shadow: 2px 0px 10px rgba(0, 0, 0, 0.3);
-
-  
- 
+  /* box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3); */
 }
 
 section {
-  background-color: #F0F4FB;
+  background-color: #f0f4fb;
   grid-area: main;
   overflow-y: auto;
-  
 
   display: grid;
   grid-template-columns: repeat(12, 1fr);
   grid-template-rows: repeat(12, 80px);
- 
 }
 /* section::-webkit-scrollbar{
   width:0px;
 } */
-
 
 /* Style classes for Navbar */
 .flex-center {
@@ -89,11 +76,6 @@ section {
 
 /* Button */
 
-.log-in{
-
-
+.log-in {
   @apply rounded-lg border border-none bg-light-blue py-1.5 px-5 text-white transition-all hover:bg-white hover:text-black text-center text-sm flex items-center justify-center;
 }
-
-
-
