--- a/styles/globals.css
+++ b/styles/globals.css
@@ -41,7 +41,7 @@ header {
 aside {
   background-color: white;
   grid-area: sidebar;
-  /* box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3); */
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
 }
 
 section {
